# kerntools

./: .gitignore  README.md  pyproject.toml
binja/: printk.py
binja/scripts/: printk.py
kerntools/: __init__.py
libkt/: CMakeLists.txt
libkt/include/: Hexdump.hpp  exp.h  kernel.h  kt.h  logger.h  pwn.h
libkt/include/kt/: cov.h  kernel.h  kt.h  pwn.h  util.h
libkt/src/: kernel.cc  pwn.cc  util.cc
libpn/: pn.h
pwnix/: __init__.py  cpio.py  packers.py
