[tool.poetry]
name = "pwnix"
version = "0.1.0"
description = ""
authors = ["elbiazo<baggy.stomp0d@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pn = "pwnix:cli"
